# pdf-translator-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pdf_translator_mcp.spec  pyproject.toml
.github/workflows/: release.yml
pdf_translator/: __init__.py  builder.py  converter_build.py  converter_extract.py  doclayout.py  extractor.py  font.py  mcp_server.py  models.py  pdfinterp.py  session.py
scripts/: build-local.sh  e2e-smoke.py
