[project]
name = "pdf-translator-mcp"
version = "0.1.0"
description = "PDF Translation MCP Server for Claude Code — extracts and rebuilds PDFs, letting the AI handle translation"
authors = [{ name = "Kevin" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf<1.25.3",
    "numpy",
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "pdfminer-six==20250416",
    "babeldoc>=0.3.50",
    "huggingface_hub",
    "mcp>=1.6.0",
    "fontTools",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_translator"]

[project.scripts]
pdf-translator-mcp = "pdf_translator.mcp_server:main"
